<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
		=============================================================
		PROJECT METADATA
		=============================================================
		Unique identifiers of the application.
	-->
    <groupId>com.tt1</groupId>
    <artifactId>simserver</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Servidor de simulaciones</name>
    <description>
        Servidor de simulaciones para el trabajo en grupo de TT1.
    </description>

    <!--
        =============================================================
        PROPERTIES
        =============================================================
        Centralized version numbers so they are easy to update later.
    -->
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Versions for our dependencies -->
        <jersey.version>3.1.8</jersey.version>
        <jackson-version>2.15.2</jackson-version>
        <jakarta.ws.rs-version>3.1.0</jakarta.ws.rs-version>
        <junit-version>5.10.5</junit-version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--
		=============================================================
		DEPENDENCIES
		=============================================================
	-->
    <dependencies>
        <!-- 1. CORE REST API (JAX-RS & JERSEY) -->

        <!-- Jakarta RESTful Web Services API:
             Provides the standard annotations (@Path, @GET, @POST, @Produces).
             Notice we removed <scope>provided</scope> because we are running standalone. -->
        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
            <version>${jakarta.ws.rs-version}</version>
        </dependency>

        <!-- Jersey Server:
             The actual implementation of the JAX-RS API. It does the heavy lifting of
             routing HTTP requests to your @Path annotated Java methods. -->
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <!-- Jersey HK2 (Dependency Injection):
             Jersey uses HK2 under the hood to instantiate your controllers and inject
             dependencies into them. -->
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${jersey.version}</version>
        </dependency>


        <!-- 2. STANDALONE SERVER (GRIZZLY) -->

        <!-- Grizzly HTTP Server integration for Jersey:
             Instead of deploying a .war file to Tomcat, this allows you to spin up
             a lightweight HTTP server directly from your public static void main() method. -->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-http</artifactId>
            <version>${jersey.version}</version>
        </dependency>


        <!-- 3. JSON SERIALIZATION (JACKSON) -->

        <!-- Jersey Media JSON Jackson:
             Tells our Jersey server to use Jackson to convert between Java Objects (like Solicitud)
             and JSON. We use Jackson instead of Eclipse Yasson because the OpenAPI
             generator placed Jackson annotations (@JsonProperty) in your models. -->
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <!-- Jackson JAX-RS JSON Provider:
             Provides the actual integration layer between Jakarta REST (JAX-RS) and Jackson. -->
        <dependency>
            <groupId>com.fasterxml.jackson.jakarta.rs</groupId>
            <artifactId>jackson-jakarta-rs-json-provider</artifactId>
            <version>${jackson-version}</version>
        </dependency>

        <!-- Jackson Datatype JSR310:
             Allows Jackson to properly serialize/deserialize modern Java 8+ Date and Time
             objects (like LocalDate, OffsetDateTime). -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson-version}</version>
        </dependency>


        <!-- 4. TESTING -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!--
		=============================================================
		BUILD & PLUGINS
		=============================================================
	-->
    <build>
        <plugins>
            <!-- Maven Shade Plugin:
                 Configures how the final executable .jar (uber-jar) is built by packaging
                 the application code along with all its dependencies. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <!-- =========================================================
                                     CRITICAL FIX FOR JERSEY/JACKSON: ServicesResourceTransformer
                                     =========================================================
                                     Libraries like Jersey and Jackson use Java's SPI (Service Provider Interface)
                                     to dynamically load components (like JSON writers/readers). They do this
                                     by placing configuration files inside the META-INF/services/ directory.

                                     When the shade plugin packages multiple jars together, it finds multiple
                                     files with the same name in META-INF/services/ and, by default, OVERWRITES them.
                                     This causes Jersey to completely "forget" that Jackson exists, leading to
                                     the "MessageBodyWriter not found for media type=text/json" error.

                                     This transformer tells Maven to MERGE those files together instead of
                                     overwriting them, preserving all dynamic registrations. -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>

                                <!-- ManifestResourceTransformer:
                                     Specifies the entry point of the application so that you can simply run
                                     `java -jar target/simserver-1.0-SNAPSHOT.jar` without specifying the class. -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.tt1.simserver.RestApplication</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>